# Enki-Old

./: .gitmodules  .travis.yml  Game.enki  PacMan.enki  Prelude.enki  README.md  basic.enki  basic.enki.html  design.enki  enki.vim  pe1.enki  pe2.enki  pe3.enki  pe4.enki  reduced-row-echelon.enki  simple-calculator.enki  survey.enki.html  test
Base/: .travis.yml  CMakeLists.txt  README.md
Base/src/ast/: AbstractNode.cpp  AbstractNode.h  AbstractNodeVisitor.cpp  AbstractNodeVisitor.h  Comment.cpp  Comment.h  DefaultNodeVisitor.cpp  DefaultNodeVisitor.h  Node.cpp  Node.h  NodeVisitor.cpp  NodeVisitor.h  Property.cpp  Property.h
Base/src/ast/constraints/: AbstractConstraint.cpp  AbstractConstraint.h  ConjConstraint.cpp  ConjConstraint.h  SingletonConstraint.cpp  SingletonConstraint.h  WhenBranch.cpp  WhenBranch.h  WhenBranches.cpp  WhenBranches.h
Base/src/ast/identifier/: AbstractIdentifier.cpp  AbstractIdentifier.h  AbstractLiteralIdentifier.cpp  AbstractLiteralIdentifier.h  CompositeIdentifier.cpp  CompositeIdentifier.h  IntegerLiteral.cpp  IntegerLiteral.h  SymbolIdentifier.cpp  SymbolIdentifier.h  TextLiteral.cpp  TextLiteral.h  VarIdentifier.cpp  VarIdentifier.h  WordIdentifier.cpp  WordIdentifier.h
Base/src/ast/toplevel/: AbstractDefinition.cpp  AbstractDefinition.h  AbstractTopLevel.cpp  AbstractTopLevel.h  AbstractTypeConstructorDef.cpp  AbstractTypeConstructorDef.h  FuncDefinition.cpp  FuncDefinition.h  ImplementationDef.cpp  ImplementationDef.h  RuleDefinition.cpp  RuleDefinition.h  Runnable.cpp  Runnable.h  SumTypeConstructorDef.cpp  SumTypeConstructorDef.h  TypeConstructorDef.cpp  TypeConstructorDef.h  TypeclassDef.cpp  TypeclassDef.h
Base/src/ast/type/: AbstractType.cpp  AbstractType.h  ConcreteType.cpp  ConcreteType.h  FuncType.cpp  FuncType.h  RuleType.cpp  RuleType.h  TypeclassConstraint.cpp  TypeclassConstraint.h
Base/src/resolver/: AbstractResolvedNode.cpp  AbstractResolvedNode.h  AbstractResolvedNodeVisitor.cpp  AbstractResolvedNodeVisitor.h  DefaultResolvedNodeVisitor.cpp  DefaultResolvedNodeVisitor.h  ResolvedNodeVisitor.cpp  ResolvedNodeVisitor.h  Resolver.cpp  Resolver.h  ResolverFactory.cpp  ResolverFactory.h
Base/src/resolver/constraints/: AbstractResolvedConstraint.cpp  AbstractResolvedConstraint.h  ResolvedConjConstraint.cpp  ResolvedConjConstraint.h  ResolvedSingletonConstraint.cpp  ResolvedSingletonConstraint.h  ResolvedWhenBranch.cpp  ResolvedWhenBranch.h  ResolvedWhenBranches.cpp  ResolvedWhenBranches.h
Base/src/resolver/definition/: AbstractResolvedDefinition.cpp  AbstractResolvedDefinition.h  AbstractResolvedTypeConstructor.cpp  AbstractResolvedTypeConstructor.h  BuiltinFunction.cpp  BuiltinFunction.h  BuiltinRule.cpp  BuiltinRule.h  ResolvedFunction.cpp  ResolvedFunction.h  ResolvedImplementation.cpp  ResolvedImplementation.h  ResolvedProperty.cpp  ResolvedProperty.h  ResolvedRule.cpp  ResolvedRule.h  ResolvedSumTypeConstructor.cpp  ResolvedSumTypeConstructor.h  ResolvedTypeConstructor.cpp  ResolvedTypeConstructor.h  ResolvedTypeclass.cpp  ResolvedTypeclass.h
Base/src/resolver/expression/: AbstractResolvedExpr.cpp  AbstractResolvedExpr.h  AbstractResolvedLiteral.cpp  AbstractResolvedLiteral.h  AbstractResolvedVal.cpp  AbstractResolvedVal.h  ResolvedFuncExpr.cpp  ResolvedFuncExpr.h  ResolvedIntLiteral.cpp  ResolvedIntLiteral.h  ResolvedRuleExpr.cpp  ResolvedRuleExpr.h  ResolvedTextLiteral.cpp  ResolvedTextLiteral.h  ResolvedVarExpr.cpp  ResolvedVarExpr.h
Base/src/resolver/identifier/: AbstractResolvedIdentifier.cpp  AbstractResolvedIdentifier.h  ResolvedDefinitionIdentifier.cpp  ResolvedDefinitionIdentifier.h  ResolvedLiteralIdentifier.cpp  ResolvedLiteralIdentifier.h
Base/src/resolver/type/: AbstractResolvedType.cpp  AbstractResolvedType.h  ResolvedBuiltinType.cpp  ResolvedBuiltinType.h  ResolvedConcreteCustomType.cpp  ResolvedConcreteCustomType.h  ResolvedConcreteType.cpp  ResolvedConcreteType.h  ResolvedFuncType.cpp  ResolvedFuncType.h  ResolvedRuleType.cpp  ResolvedRuleType.h  ResolvedTypeclassConstraint.cpp  ResolvedTypeclassConstraint.h
Base/src/typechecking/: TypeInferer.cpp  TypeInferer.h  TypedNode.cpp  TypedNode.h  TypedNodeVisitor.cpp  TypedNodeVisitor.h
Base/src/typechecking/constraints/: AbstractTypedConstraint.cpp  AbstractTypedConstraint.h  TypedConjConstraint.cpp  TypedConjConstraint.h  TypedSingletonConstraint.cpp  TypedSingletonConstraint.h  TypedWhenBranch.cpp  TypedWhenBranch.h  TypedWhenBranches.cpp  TypedWhenBranches.h
Base/src/util/: Either.h  Error.h
Base/test/: CMakeLists.txt  main.cpp
Base/test/resolver/: DefaultResolvedNodeVisitor.cpp  DefaultResolvedNodeVisitor.h  FunctionResolverTest.cpp  IdentifierUnifierTest.cpp  LiteralResolverTest.cpp  ResolverTest.cpp
Base/test/typechecking/: LiteralTypeInferTest.cpp  TypeInfererTest.cpp  TypeInfererTest.h
(+45 files in other folders)
